// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSplitDropdown should render "no option" item when items array is empty 1`] = `
<React.Fragment>
  <withI18nextTranslation(ActionButton)
    available={true}
    bsStyle="default"
    className="theme-tc-split-dropdown"
    data-feature="action.add"
    disabled={false}
    icon="fa fa-plus"
    id="42"
    inProgress={false}
    loading={false}
    onClick={[MockFunction]}
    t={[Function]}
    title="Add File"
    tooltipPlacement="top"
  />
  <withI18nextTranslation(ActionDropdown)
    items={
      <span>
        No option
      </span>
    }
    t={[Function]}
  >
    Open "Add File" menu
  </withI18nextTranslation(ActionDropdown)>
</React.Fragment>
`;

exports[`ActionSplitDropdown should render a button with icon and label 1`] = `
<React.Fragment>
  <withI18nextTranslation(ActionButton)
    available={true}
    bsStyle="default"
    className="theme-tc-split-dropdown"
    data-feature="action.add"
    disabled={false}
    icon="fa fa-plus"
    id="42"
    inProgress={false}
    loading={false}
    onClick={[MockFunction]}
    t={[Function]}
    title="Add File"
    tooltipPlacement="top"
  />
  <withI18nextTranslation(ActionDropdown)
    items={
      Array [
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          data-feature="action.local"
          disabled={false}
          inProgress={false}
          label="From Local"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Local
        </withI18nextTranslation(ActionButton)>,
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          data-feature="action.remote"
          disabled={false}
          inProgress={false}
          label="From Remote"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Remote
        </withI18nextTranslation(ActionButton)>,
      ]
    }
    t={[Function]}
  >
    Open "Add File" menu
  </withI18nextTranslation(ActionDropdown)>
</React.Fragment>
`;

exports[`ActionSplitDropdown should render a button with label 1`] = `
<React.Fragment>
  <withI18nextTranslation(ActionButton)
    available={true}
    bsStyle="default"
    className="theme-tc-split-dropdown"
    data-feature="action.add"
    disabled={false}
    id="42"
    inProgress={false}
    loading={false}
    onClick={[MockFunction]}
    t={[Function]}
    title="Add File"
    tooltipPlacement="top"
  />
  <withI18nextTranslation(ActionDropdown)
    items={
      Array [
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          data-feature="action.local"
          disabled={false}
          inProgress={false}
          label="From Local"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Local
        </withI18nextTranslation(ActionButton)>,
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          data-feature="action.remote"
          disabled={false}
          inProgress={false}
          label="From Remote"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Remote
        </withI18nextTranslation(ActionButton)>,
      ]
    }
    t={[Function]}
  >
    Open "Add File" menu
  </withI18nextTranslation(ActionDropdown)>
</React.Fragment>
`;

exports[`ActionSplitDropdown should render items with icons 1`] = `
<React.Fragment>
  <withI18nextTranslation(ActionButton)
    available={true}
    bsStyle="default"
    className="theme-tc-split-dropdown"
    data-feature="action.add"
    disabled={false}
    icon="fa fa-plus"
    id="42"
    inProgress={false}
    loading={false}
    onClick={[MockFunction]}
    t={[Function]}
    title="Add File"
    tooltipPlacement="top"
  />
  <withI18nextTranslation(ActionDropdown)
    items={
      Array [
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          disabled={false}
          icon="fa fa-plus"
          inProgress={false}
          label="From Local"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Local
        </withI18nextTranslation(ActionButton)>,
        <withI18nextTranslation(ActionButton)
          available={true}
          bsStyle="default"
          disabled={false}
          icon="fa fa-plus"
          inProgress={false}
          label="From Remote"
          loading={false}
          onClick={[Function]}
          t={[Function]}
          tooltipPlacement="top"
        >
          From Remote
        </withI18nextTranslation(ActionButton)>,
      ]
    }
    t={[Function]}
  >
    Open "Add File" menu
  </withI18nextTranslation(ActionDropdown)>
</React.Fragment>
`;
